bumped .project-info h2 down .1remto fix iphone5s wordbreak overlap

--- a/css/less/components/project.less
+++ b/css/less/components/project.less
@@ -81,5 +81,8 @@ PROJECTS
 	.project {
 		height: 35rem;
 	}
+	.project-info h2 {
+		font-size: 1.9rem;
+	}
 }
 
